# OS_Lab_No1

./: .gitignore  CMakeLists.txt  Doc.md  Readme.md  lab_01_child  lab_01_parent  strace_output.txt  test.sh  test_input.txt  test_output.txt
OS_LAB_No1/: CMakeLists.txt  Readme.md  strace_output.txt
OS_LAB_No1/src/: batcher_sort.c  child.c
OS_LAB_No2/: CMakeLists.txt  Readme.md
OS_LAB_No2/src/: main.c
OS_LAB_No3/: CMakeLists.txt
OS_LAB_No3/src/: client.c  server.c
doc/: 216_Седов_Лаб1.docx  ~$6_Седов_Лаб1.docx
src/: child.c  parent.c
